Sample query results for local demo. (Live needs a proxy to avoid Single-Domain browser policy)

--- a/landsat_viewer.html
+++ b/landsat_viewer.html
@@ -61,7 +61,7 @@
 			var queryURL = 'http://www.ga.gov.au/search/api/search/results'
 			var queryMethod = 'POST'
 			if (dev) {
-				queryURL = 'query.json'
+				queryURL = 'landsat_sample_query.json'
 				queryMethod = 'GET'
 			}
 			
